2012-05-24  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated defaults: compact is not enabled by default
	and dbschema version is updated.

2012-05-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.php: set the wget method
	by default.
	
	* extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/update_pandora.php: cleaned source code
	style.

2012-05-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed 
	desactivation of history data when edit a policy module
	Merged from trunk

2012-05-22  Sancho Lerena <slerena@artica.es>

	* include/functions_ui.php: Added definition for module unknown.

	* operation/agentes/status_monitor.php: unknown modules are always
	drawn in grey. Fixed inconsistent behaviour.

	* images/status_sets/color_text/module_unknown.png: Missing image.

2012-05-22  Junichi Satoh  <junichi@rworks.jp>

	* operation/messages/message_edit.php,
	operation/messages/message_list.php: Merged from trunk. Changed words
	for sender and destination.

2012-05-18  Koichiro Kikuchi <koichiro@rworks.jp>

	* godmode/agentes/configurar_agente.php: Added missing io_safe_input
	 to the module copy operation.

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* install.php: Fixed number of step mistakes
	in the install process

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added create_network_module_from_component 
	operation to API
	Merged from trunk

2012-05-17  Sergio Martin <sergio.martin@artica.es>

        * extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added a entity
	        encode to network component name

2012-05-17  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager/settings.php,
	  extensions/update_manager/main.php: Added missing dbport parameter to
	 um_db_connect() call.

2012-05-17  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager.php,