@@ -1,3 +1,13 @@
+2012-05-27  Junichi Satoh  <junichi@rworks.jp>
+
+	* general/pandora_help.php: Fixed i18n translation does not work
+	in the help window.
+
+	* include/help/ja/help_main_help.php: Added new general
+	introduction help file.
+
+	Merged from trunk.
+
 2012-05-24  Sancho Lerena <slerena@artica.es>
 
 	* pandoradb_data.sql: Updated defaults: compact is not enabled by default
